--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
             <div class="container conatiner-hero">
                 <div>
                     <h1 class="hero-title">Explore the High Seas with Our Luxury Yacht Rentals</h1>
-                    <p class="hero-paragraph">Experience the freedom and luxury of yachting on the open seas. Choose from
+                    <p class="hero-paragraph">Experience the freedom and luxury of yachting on the open seas. Choose
+                        from
                         our
-                        top-of-the-line yachts and embark on an unforgettable journey surrounded by breathtaking views and
+                        top-of-the-line yachts and embark on an unforgettable journey surrounded by breathtaking views
+                        and
                         state-of-the-art amenities.</p>
                     <div class="hero-btn-wrapper">
                         <button class="hero-btn btn-one">Get Started</button>
@@ -64,6 +66,33 @@
                     <span class="inner-span">Book now and make your dream yacht rental a reality</span>
                     <img src="./img/hero-man.png" alt="" class="inner-man-img">
                 </div>
+                <div class="blur-hero"></div>
+            </div>
+        </section>
+        <section class="rent">
+            <div class="container rent-container">
+                <p class="rent-title">Yacht Adventures fleet is here to take you on the ultimate adventure. Each yacht
+                    is
+                    hand-picked for its
+                    comfort, style, and performance.</p>
+                <ul class="rent-list">
+                    <li class="rent-list-item rent-item-one">
+                        <p class="rent-list-paragraph">From spacious decks to state-of-the-art technology, our yachts
+                            are designed to provide the
+                            perfect
+                            blend of luxury and functionality. Take a look at our selection below and choose the yacht
+                            that
+                            matches your needs and preferences.</p>
+                    </li>
+                    <li class="rent-list-item rent-item-two">
+                        <p class="rent-list-paragraph">No matter which yacht you choose, our experienced crew will
+                            ensure that your journey is smooth
+                            and
+                            enjoyable. Book now and get ready for an unforgettable adventure on the high seas.</p>
+                    </li>
+                </ul>
+                <img src="./img/rent-one.png" alt="" class="rent-img-one">
+                <img src="./img/rent-two.png" alt="" class="rent-img-two">
             </div>
         </section>
     </main>
