--- a/index.html
+++ b/index.html
@@ -58,15 +58,9 @@
                         <div class="hero-inner-container">
                             <img src="./img/bg-hero (2).png" alt="" class="hero-bg-img">
                             <div class="hero-human-wrapper">
-                                <svg class="darkman-icon hero-icon">
-                                    <use href="./img/symbols.svg#human-icon"></use>
-                                </svg>
-                                <svg class="woman-icon hero-icon">
-                                    <use href="./img/symbols.svg#human-icon"></use>
-                                </svg>
-                                <svg class="woman-icon hero-icon">
-                                    <use href="./img/symbols.svg#human-icon"></use>
-                                </svg>
+                                <img src="./img/darkman.png" alt="" class="woman-icon hero-icon">
+                                <img src="./img/woman.png" alt="" class="woman-icon hero-icon">
+                                <img src="./img/lightman.png" alt="" class="woman-icon hero-icon">
                             </div>
                             <h4 class="inner-title">Our Clients</h4>
                             <img src="./img/hero-yacht.png" alt="" class="inner-yacht-img">
@@ -106,11 +100,15 @@
                         </ul>
                         <img src="./img/rent-one.png" alt="" class="rent-img-one">
                         <img src="./img/rent-two.png" alt="" class="rent-img-two">
+                        <div class="bg-ellips"></div>
                         <div class="rent-btn-wrapper">
                             <img src="./img/rent-btn-img.png" alt="" class="rent-img-three">
                             <h3 class="rent-btn-title">Choose your dream yacht and sail away into the sunset</h3>
                             <button type="button" class="rent-btn">Yacht rental</button>
                         </div>
+                        <img src="./img/rent-btn-img.png" alt="" class="rent-img-three-destop">
+                        <h3 class="rent-btn-title-desktop">Choose your dream yacht and sail away into the sunset</h3>
+                        <button type="button" class="rent-btn-desktop">Yacht rental</button>
                     </div>
                 </section>
             </main>
