--- a/index.html
+++ b/index.html
@@ -111,6 +111,277 @@
                         <button type="button" class="rent-btn-desktop">Yacht rental</button>
                     </div>
                 </section>
+                <section class="slider">
+                    <div class="container">
+                        <ul class="slider-list" id="sliderList">
+                            <li class="slider-item">
+                                <img src="./img/slider-one.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">Arrow</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">48m(155ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILDER</h5>
+                                        <h5 class="yacht-qualities">Admiral</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2021</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">11 in 5 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€33,500,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="slider-item">
+                                <img src="./img/slider-two.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">BENETTI OASIS 40M...</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">41m (133ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">SHIPYARD</h5>
+                                        <h5 class="yacht-qualities">Benetti</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2025</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">10 in 5 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€23,210,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                             <li class="slider-item">
+                                <img src="./img/slider-three.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">BELLE ANNA</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">50m(155ft) </h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">SHIPYARD</h5>
+                                        <h5 class="yacht-qualities">ISA</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2012</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">12 in 6 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€21,000,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                             <li class="slider-item">
+                                <img src="./img/slider-four.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">Ellen</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">40m (132ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">SHIPYARD</h5>
+                                        <h5 class="yacht-qualities">Perini Navi</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2001 / 2016 (refitted)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">9 in 4 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€9,300,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="slider-item">
+                                <img src="./img/slider-five.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">MIRAGE 401</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">38m (125ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">SHIPYARD</h5>
+                                        <h5 class="yacht-qualities">Gianetti Custom Yachts</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2024</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">10 in 5 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€13,500,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="slider-item">
+                                <img src="./img/slider-six.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">KING</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">33m (109ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">SHIPYARD</h5>
+                                        <h5 class="yacht-qualities">Overmarine</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2004 / 2018 (refitted)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">9 in 4 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€1,850,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="slider-item">
+                                <img src="./img/slider-seven.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">SALT</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">32m (105ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILDER</h5>
+                                        <h5 class="yacht-qualities">SanLorenzo</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2019</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">11 in 5 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€7,800,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                             <li class="slider-item">
+                                <img src="./img/slider-eight.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">STORM</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">32m (103ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">SHIPYARD</h5>
+                                        <h5 class="yacht-qualities">Overmarine</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2005 / 2022 (refitted)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">9 in 4 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">€2,900,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="slider-item">
+                                <img src="./img/slider-nine.png" alt="" class="slider-img">
+                                <div class="yacht-name-wrapper">
+                                    <h5 class="yacht-name">COLLU</h5>
+                                    <span class="yacht-type">LUXURY YAHTS</span>
+                                </div>
+                                <ul class="yacht-qualities-list">
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">LENGTH</h5>
+                                        <h5 class="yacht-qualities">29m (96ft)</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">SHIPYARD</h5>
+                                        <h5 class="yacht-qualities">Ferretti</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">BUILT</h5>
+                                        <h5 class="yacht-qualities">2014</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">GUESTS</h5>
+                                        <h5 class="yacht-qualities">10 in 5 cabins</h5>
+                                    </li>
+                                    <li class="yacht-qualities-item">
+                                        <h5 class="yacht-qualities yacht-qualities-mod">PRICE</h5>
+                                        <h5 class="yacht-qualities">$4,300,000</h5>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <div class="slider-btn-wrapper">
+                            <button type="button" id="prev" class="slider-btn prev">prev</button>
+                            <button type="button" id="next" class="slider-btn">next</button>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
     </div>
