--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                     </li>
                                 </ul>
                             </li>
-                             <li class="slider-item">
+                            <li class="slider-item">
                                 <img src="./img/slider-three.png" alt="" class="slider-img">
                                 <div class="yacht-name-wrapper">
                                     <h5 class="yacht-name">BELLE ANNA</h5>
@@ -201,7 +201,7 @@
                                     </li>
                                 </ul>
                             </li>
-                             <li class="slider-item">
+                            <li class="slider-item">
                                 <img src="./img/slider-four.png" alt="" class="slider-img">
                                 <div class="yacht-name-wrapper">
                                     <h5 class="yacht-name">Ellen</h5>
@@ -317,7 +317,7 @@
                                     </li>
                                 </ul>
                             </li>
-                             <li class="slider-item">
+                            <li class="slider-item">
                                 <img src="./img/slider-eight.png" alt="" class="slider-img">
                                 <div class="yacht-name-wrapper">
                                     <h5 class="yacht-name">STORM</h5>
@@ -380,6 +380,16 @@
                             <button type="button" id="prev" class="slider-btn prev">prev</button>
                             <button type="button" id="next" class="slider-btn">next</button>
                         </div>
+                    </div>
+                </section>
+                <section class="adventages">
+                    <div class="container contaier-adventages">
+                        <img src="./img/img diving.png" alt="" class="adventages-img diving-img">
+                        <h4 class="adventages-name diving">Diving</h4>
+                        <img src="./img/img fishing.png" alt="" class="adventages-img fishing-img">
+                        <h4 class="adventages-name fishing">Fishing</h4>
+                        <img src="./img/img sunbathing.png" alt="" class="adventages-img sunbathing-img">
+                        <h4 class="adventages-name sunbathing">Sunbathing</h4>
                     </div>
                 </section>
             </main>
